@@ -1,5 +1,9 @@
 2003-01-06  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-file-properties.c
+
+	Big rewrite to use Glade; fix for bug #122029 (respond to DTD notifications)
+
 	* cong-editor-node-text.c
 
 	Suppressed flood of g_return_if_fail error messages from cong_node_get_ordering occurring inside undo/redo system due to temporarily invalid selections (fixes bug #130236)
